--- a/BracketsFiles/exampleBrackets/css/example.css
+++ b/BracketsFiles/exampleBrackets/css/example.css
@@ -5,7 +5,11 @@ Desc: This is the css example file
 */
 body {
                 color: #010101;
-                background-color: #ABABAB;
+                /*background-color: #ABABAB;*/
+    
+                background-image: url(../images/Uob7gkJ1sywmNGCSwGL6oG0mPDwZ-v7_6rR05IBU2cg.jpg);
+                /*background-repeat: */
+                background-position: center;
                 
                 margin-left: auto;
                 margin-right: auto;
